# kairos3_team3

./: README.md
ws_project/.svn/: wc.db
ws_project/src/QR_detector/: package.xml  setup.py
ws_project/src/QR_detector/QR_detector/: detect_send.py  mtx.csv
ws_project/src/kairos_interfaces/: CMakeLists.txt
ws_project/src/kairos_interfaces/action/: PlcCobot.action
ws_project/src/kairos_interfaces/srv/: PackageInfo.srv
ws_project/src/line_tracing_agv/: package.xml  setup.py
ws_project/src/line_tracing_agv/line_tracing_agv/camera_calibration/: dist.csv
ws_project/src/moveit_cobot_pkg/: CMakeLists.txt  package.xml
ws_project/src/moveit_cobot_pkg/src/: coord_joint_test.cpp  pick_place_action_server_test.cpp
ws_project/src/mycobot_pkg/: package.xml  setup.py
ws_project/src/mycobot_pkg/mycobot_pkg/: moveit_sub.py
ws_project/src/mycobot_with_gripper/: .setup_assistant
ws_project/src/mycobot_with_gripper/config/: mycobot_320.srdf
ws_project/src/mycobot_with_gripper/config/urdf/: mycobot_320_m5_custom.urdf  one.stl  그리퍼변경.txt
ws_project/src/plc/: setup.py
ws_project/src/plc/plc/: new_plc.py  plc_test2.py
ws_project/src/web_viewer/: setup.cfg
ws_project/src/web_viewer/web_viewer/: web_viewer_node.py
